# 20222-team-14

./: CMakeLists.txt  main.cpp  readme.md
classes/Bishop/: Bishop.h  bishopMtd.cpp
classes/Board/: Board.h  boardMtd.cpp
classes/Cell/: Cell.h  CellMtd.cpp
classes/King/: King.h  kingMtd.cpp
classes/Knight/: Knight.h  knightMtd.cpp
classes/Pawn/: Pawn.h  pawnMtd.cpp
classes/Piece/: Piece.h  PieceMtd.cpp  TotalPiece.h  totalPieceMtd.cpp
classes/PieceIndex/: PieceIndex.h  pieceIndexMtd.cpp
classes/Queen/: Queen.h  queenMtd.cpp
classes/Rook/: Rook.h  rookMtd.cpp
classes/Tower/: Tower.h  towerMtd.cpp
classes/cell/: Cell.h  CellMtd.cpp
controllers/BoardController/: BoardController.h  BoardControllerMtd.cpp  Connector.hpp
interface/: a.out  interface.cpp  interface.h  main.cpp
structs/: PieceCoor.h
